# pyratehike

./: .gitignore  LICENSE  MastersThesis.md  News.md  R-vs-python.md  README.md  Roadmap.md  pyproject.toml  requirements.txt
.github/workflows/: check-code.yaml  unit-tests.yaml
pyratehike/: __init__.py  _date_arithmetic.py  _general.py  _holiday_offset.py  _interpolation.py  curve.py  instrument.py  list_of_instruments.py  metrics.py  parameters_settings.py
pyratehike/data/: ibor.csv  ois.csv
sphinx/: FinancialInstrument.rst  RHSettings.rst  _BootstrapInfo.rst  _RHParameters.rst  classes.rst  conf.py  index.rst
sphinx/_templates/: layout.html
sphinx/doctrees/: FinancialInstrument.doctree  IRCurve.doctree  ListOfInstruments.doctree  RHSettings.doctree  SyntheticInstrument.doctree  _BootstrapInfo.doctree  _Period.doctree  _RHDate.doctree  _RHParameters.doctree  classes.doctree  environment.pickle  functions.doctree  hiddenclasses.doctree  index.doctree  objects.doctree  package.doctree  rh_params.doctree
sphinx/html/: .buildinfo  FinancialInstrument.html  IRCurve.html  ListOfInstruments.html  RHSettings.html  SyntheticInstrument.html  _BootstrapInfo.html  _Period.html  _RHDate.html  _RHParameters.html  classes.html  functions.html  genindex.html  hiddenclasses.html  index.html  objects.html  objects.inv  package.html  py-modindex.html  rh_params.html  search.html  searchindex.js
tests/: test_add_synthetics.py  test_curve.py  test_date_arithmethic.py  test_instrument.py  test_interpolate.py  test_parameters_settings.py  test_roundtrip.py
(+10 files in other folders)
